@@ -2,41 +2,71 @@ package xyz.duncanruns.julti.plugin;
 
 import com.google.gson.Gson;
 import org.apache.logging.log4j.Level;
+import org.reflections.Reflections;
+import org.reflections.scanners.ResourcesScanner;
 import xyz.duncanruns.julti.Julti;
 import xyz.duncanruns.julti.JultiOptions;
 import xyz.duncanruns.julti.util.ExceptionUtil;
+import xyz.duncanruns.julti.util.ResourceUtil;
 
 import java.io.File;
 import java.io.IOException;
-import java.lang.reflect.Method;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.FileSystem;
-import java.nio.file.FileSystems;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.*;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Enumeration;
 import java.util.List;
+import java.util.jar.JarEntry;
+import java.util.jar.JarFile;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+@SuppressWarnings({"ConstantValue", "DataFlowIssue"})
 public final class PluginManager {
     private static final PluginManager INSTANCE = new PluginManager();
     private static final Gson GSON = new Gson();
     private static final Path PLUGINS_PATH = JultiOptions.getJultiDir().resolve("plugins").toAbsolutePath();
 
-    private final List<JultiPluginData> loadedPluginDataList = new ArrayList<>();
+    private final List<LoadedJultiPlugin> loadedPlugins = new ArrayList<>();
 
     private PluginManager() {
+    }
+
+    public static Path getPluginsPath() {
+        return PLUGINS_PATH;
     }
 
     public static PluginManager getPluginManager() {
         return INSTANCE;
     }
 
-    private static void importJar(File file) throws Exception {
-        Method addURL = URLClassLoader.class.getDeclaredMethod("addURL", URL.class);
-        addURL.setAccessible(true);
-        addURL.invoke(URLClassLoader.getSystemClassLoader(), file.toURI().toURL());
+    private static PluginInitializer importJar(File file, String initializer) throws Exception {
+        // https://stackoverflow.com/questions/11016092/how-to-load-classes-at-runtime-from-a-folder-or-jar
+        JarFile jarFile = new JarFile(file);
+        Enumeration<JarEntry> e = jarFile.entries();
+
+        URL[] urls = {new URL("jar:file:" + file + "!/")};
+        URLClassLoader cl = URLClassLoader.newInstance(urls);
+
+        while (e.hasMoreElements()) {
+            JarEntry je = e.nextElement();
+            if (je.isDirectory() || !je.getName().endsWith(".class")) {
+                continue;
+            }
+            // -6 because of .class
+            String className = je.getName().substring(0, je.getName().length() - 6);
+            className = className.replace('/', '.');
+            cl.loadClass(className);
+        }
+
+        PluginInitializer pi = (PluginInitializer) cl.loadClass(initializer).newInstance();
+        jarFile.close();
+        return pi;
     }
 
     @SuppressWarnings("all") //Suppress the redundant cast warning which resolves an ambiguous case
@@ -48,17 +78,58 @@ public final class PluginManager {
         }
     }
 
+    public List<LoadedJultiPlugin> getLoadedPlugins() {
+        return Collections.unmodifiableList(this.loadedPlugins);
+    }
+
     public void loadPluginsFromFolder() throws IOException {
         if (!Files.exists(PLUGINS_PATH)) {
             return;
         }
-        Files.list(PLUGINS_PATH).filter(path -> path.getFileName().toString().endsWith(".jar")).forEach(path -> {
+        try (Stream<Path> list = Files.list(PLUGINS_PATH)) {
+            list.filter(path -> path.getFileName().toString().endsWith(".jar")).forEach(path -> {
+                try {
+                    this.checkPluginJar(path);
+                } catch (Throwable e) {
+                    Julti.log(Level.WARN, "Failed to load plugin " + path + "!\n" + ExceptionUtil.toDetailedString(e));
+                }
+            });
+        }
+    }
+
+    private void loadDefaultPlugins() throws IOException, URISyntaxException {
+
+        Reflections reflections = new Reflections("", new ResourcesScanner());
+        Pattern pattern = Pattern.compile("defaultplugins/.+\\.jar");
+        List<String> fileNames = reflections.getResources(s -> s.endsWith(".jar")).stream().filter(s -> pattern.matcher(s).matches()).collect(Collectors.toList());
+
+        Julti.log(Level.DEBUG, "Default Plugins:" + fileNames);
+
+        for (String fileName : fileNames) {
+            Path path = Paths.get(File.createTempFile(fileName, null).getPath());
+            if (!fileName.startsWith("/")) {
+                fileName = "/" + fileName;
+            }
+            ResourceUtil.copyResourceToFile(fileName, path);
             try {
                 this.checkPluginJar(path);
             } catch (Exception e) {
-                Julti.log(Level.WARN, "Failed to load plugin " + path + "!\n" + ExceptionUtil.toDetailedString(e));
+                Julti.log(Level.ERROR, "Failed to load default plugin: " + fileName);
             }
-        });
+        }
+    }
+
+    public void loadPlugins() {
+        try {
+            this.loadPluginsFromFolder();
+        } catch (IOException e) {
+            Julti.log(Level.ERROR, "Failed to load plugins from folder: " + ExceptionUtil.toDetailedString(e));
+        }
+        try {
+            this.loadDefaultPlugins();
+        } catch (IOException | URISyntaxException e) {
+            Julti.log(Level.ERROR, "Failed to load default plugins: " + ExceptionUtil.toDetailedString(e));
+        }
     }
 
     /**
@@ -66,47 +137,36 @@ public final class PluginManager {
      */
     private void checkPluginJar(Path path) throws Exception {
         JultiPluginData jultiPluginData = JultiPluginData.fromString(getJarJPJContents(path));
-        if (this.registerPlugin(jultiPluginData)) {
-            importJar(path.toFile());
+        if (this.canRegister(jultiPluginData)) {
+            PluginInitializer pluginInitializer = importJar(path.toFile(), jultiPluginData.initializer);
+            this.registerPlugin(jultiPluginData, pluginInitializer);
         } else {
             Julti.log(Level.WARN, "Failed to load plugin " + path + ", because there is another plugin with the same id already loaded.");
         }
     }
 
     /**
-     * Loads a plugin from a plugin data object.
+     * Loads a plugin from a plugin data object and an initializer.
      *
-     * @param jultiPluginData the plugin data object
-     *
-     * @return true if the plugin has a unique id, otherwise false
+     * @param data the plugin data object
      */
-    public boolean registerPlugin(JultiPluginData jultiPluginData) {
-        if (this.loadedPluginDataList.isEmpty() || this.loadedPluginDataList.stream().noneMatch(jultiPluginData::matchesOther)) {
-            this.loadedPluginDataList.add(jultiPluginData);
-            return true;
-        }
-        return false;
+    public void registerPlugin(JultiPluginData data, PluginInitializer initializer) {
+        this.loadedPlugins.add(new LoadedJultiPlugin(data, initializer));
+    }
+
+    private boolean canRegister(JultiPluginData data) {
+        return this.loadedPlugins.isEmpty() || this.loadedPlugins.stream().map(p -> p.pluginData).noneMatch(data::matchesOther);
     }
 
     public void initializePlugins() {
-        this.loadedPluginDataList.forEach(pluginData -> {
-            if (pluginData.initializer == null || pluginData.initializer.isEmpty()) {
-                return;
-            }
-            try {
-                PluginInitializer pluginInitializer = (PluginInitializer) Class.forName(pluginData.initializer).newInstance();
-                pluginInitializer.initialize();
-            } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
-                throw new RuntimeException(e);
-            }
-        });
+        this.loadedPlugins.forEach(plugin -> plugin.pluginInitializer.initialize());
     }
 
     public static class JultiPluginData {
-        public String name = null;
-        public String id = null;
-        public String version = null;
-        public String initializer = null;
+        public final String name = null;
+        public final String id = null;
+        public final String version = null;
+        public final String initializer = null;
 
         public static JultiPluginData fromString(String string) {
             return GSON.fromJson(string, JultiPluginData.class);
@@ -114,6 +174,16 @@ public final class PluginManager {
 
         public boolean matchesOther(JultiPluginData other) {
             return other != null && this.id.equals(other.id);
+        }
+    }
+
+    public static class LoadedJultiPlugin {
+        public final JultiPluginData pluginData;
+        public final PluginInitializer pluginInitializer;
+
+        private LoadedJultiPlugin(JultiPluginData data, PluginInitializer initializer) {
+            this.pluginData = data;
+            this.pluginInitializer = initializer;
         }
     }
 }
